--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 .h1 {
-  background-color: darkolivegreen;
+  background-color: darkviolet;
   color: white;
   padding: 10px;
+  border-radius: 10px;
+}
+p {
+  font-family: Arial, Helvetica, sans-serif;
 }
