--- a/styles.css
+++ b/styles.css
@@ -6,4 +6,8 @@
 }
 p {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  background-color: dimgrey;
+  color: white;
+  padding: 8px;
 }
